fix card layout bug

--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -1,3 +1,3 @@
-.mr-auto{
-    position: relative;
+img{
+ margin-bottom: 5px;
 }
